istio-demo/helloworld-vs-w-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs-w-dr
spec:
  hosts:
  - "helloworld.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: helloworld.default.svc.cluster.local
        subset: helloworld-v1 # 이번에는 subset을 쓴다!
      weight: 70 # 70% 트래픽
    - destination:
        host: helloworld.default.svc.cluster.local
        subset: helloworld-v2
      weight: 30 # 30% 트래픽
