istio-demo/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
  - "helloworld.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: helloworld-v1.default.svc.cluster.local
      weight: 20 # 20% 트래픽
    - destination:
        host: helloworld-v2.default.svc.cluster.local
      weight: 80 # 80% 트래픽
